--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "start": "dist/index.html",
+    "start": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -18,6 +18,9 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5"
+  },
+  "engines": {
+    "node": "20.5.9"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
